# android-epub

./: .gitignore  INTEGRATION.md  README.md  build-android.sh  build-rust.sh  build.gradle.kts  devbox.json  gradle.properties  settings.gradle.kts  setup-android.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidepub/: EpubApplication.kt  LocalTestActivity.kt  MainActivity.kt  SettingsActivity.kt  TestActivity.kt
app/src/main/java/com/example/androidepub/models/: EpubHistory.kt
app/src/main/java/com/example/androidepub/readability/: ReadabilityProcessor.kt
app/src/main/java/com/example/androidepub/utils/: DateConverter.kt  EpubCreator.kt  EpubTestHelper.kt  PermissionManager.kt  PreferenceManager.kt
app/src/main/java/com/example/androidepub/viewmodels/: MainViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_local_test.xml  activity_main.xml  activity_settings.xml  activity_test.xml  dialog_folder_explanation.xml  item_epub_history.xml  layout_no_folder_selected.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  preferences.xml
native/: Cargo.toml
native/hub/: Cargo.toml  build.rs
native/hub/src/: hub.udl  lib.rs
test_epub/: EpubTest.kt  TestEpubConversion.java  TestEpubCreation.kt  direct_test.ps1  run_local_test.ps1  run_test.bat  run_test.ps1  test.html  test_conversion.ps1
test_epub/direct_test/: DirectTest.java  direct_test.html  output.epub
